package auction.server.model;

public abstract class Entity {
}
